Fixed the sticky and uninav's 'stuck'
aka set-position-fixed-on-scroll-out-of-view functionality

--- a/aegis/_constants.scss
+++ b/aegis/_constants.scss
@@ -91,6 +91,8 @@ $sidebar-z: 100;
 $mask-z: 200;
 $modal-z: 250;
 $file-input-z: 300;
+$uninav-z: 100;
+$uniview-z: 99;
 
 
 // TYPOGRAPHY
